src/kubernetes/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rocket-app
  namespace: user-morgannder
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: rocket-league
  template:
    metadata:
      labels:
        app: rocket-league
    spec:
      containers:
      - name: web
        image: docker.io/meaumeau/ensai2a-cl-rlstatsanalysis:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
        volumeMounts:
        - name: db-storage
          mountPath: /app/src/database
      volumes:
      - name: db-storage
        persistentVolumeClaim:
          claimName: rocket-data-pvc
