src/kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rocket-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rocket-league
  template:
    metadata:
      labels:
        app: rocket-league
    spec:
      containers:
      - name: web
        image: docker.io/meaumeau/ensai2a-cl-rlstatsanalysis:v1.0
        ports:
        - containerPort: 8000
        # Configuration des variables d'environnement
        volumeMounts:
        - name: db-storage
          mountPath: /app/src/database
      # Définition du volume persistant au niveau du Pod
      volumes:
      - name: db-storage
        persistentVolumeClaim:
          claimName: rocket-data-pvc
