src/kubernetes/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: rocket-app-service
  namespace: user-morgannder
spec:
  selector:
    app: rocket-league
  ports:
  - port: 8000
    targetPort: 8000
