src/kubernetes/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: rocket-frontend-service
  namespace: user-morgannder
spec:
  selector:
    app: rocket-frontend
  ports:
  - port: 80
    targetPort: 80
