src/kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rocket-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: rocketcl.api.kub.sspcloud.fr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rocket-service
            port:
              number: 80
